// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should load and render variables for process instance count reports 1`] = `
<li
  className="DistributedBy"
>
  <span
    className="label"
  >
    Distribution
  </span>
  <Select
    className="ReportSelect"
    key="3"
    onChange={[Function]}
  >
    <Option
      value="none"
    >
      Nothing
    </Option>
    <Submenu
      key="variable"
      label="Variable"
    >
      <Option
        key="0"
        value="var1"
      >
        var1
      </Option>
      <Option
        key="1"
        value="var2"
      >
        var2
      </Option>
      <Option
        key="2"
        value="var3"
      >
        var3
      </Option>
    </Submenu>
  </Select>
</li>
`;

exports[`should match snapshot 1`] = `
<li
  className="DistributedBy"
>
  <span
    className="label"
  >
    Distribution
  </span>
  <Select
    className="ReportSelect"
    key="0"
    onChange={[Function]}
  >
    <Option
      value="none"
    >
      Nothing
    </Option>
    <Option
      key="assignee"
      value="assignee"
    >
      Assignee
    </Option>
    <Option
      key="candidateGroup"
      value="candidateGroup"
    >
      Candidate Group
    </Option>
  </Select>
</li>
`;
